--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you: 
+# If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
@@ -23,18 +23,17 @@ email: sachin.soman@ucdconnect.ie
 description: >- # this means to ignore newlines until "baseurl:"
   Interesting observations in Python that I would like to document.
 
-# baseurl: "" # the subpath of your site, e.g. /blog
-baseurl: "Python_blog/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+# baseurl: "Python_blog/" # the subpath of your site, e.g. /blog
+url: "https://sachsom95.github.io/Python_blog" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ssachinsoman95
-github_username:  sachsom95
+github_username: sachsom95
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
   - jekyll-sitemap
-
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
