--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ email: sachin.soman@ucdconnect.ie
 description: >- # this means to ignore newlines until "baseurl:"
   Interesting observations in Python that I would like to document.
 
-baseurl: "" # the subpath of your site, e.g. /blog
-# baseurl: "Python_blog/" # the subpath of your site, e.g. /blog
+# baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "Python_blog/" # the subpath of your site, e.g. /blog
 url: "https://sachsom95.github.io/Python_blog" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ssachinsoman95
 github_username: sachsom95
